fixed mobile layout issue, updated team roles

--- a/theme/css/style.css
+++ b/theme/css/style.css
@@ -1366,13 +1366,19 @@ body, p, h1, h2, h3, h4, h5, h6 {
   padding: 100px 0px;
 }
 
+.works_area .appStoreButton {
+  text-align: center;
+  margin-bottom: 30px;
+}
+
 .works_area .works_left_img {
   text-align: center;
 }
 
 .works_area .works_left_img img {
   max-width: 100%;
-  height: 41.5rem;
+  max-height: 41.5rem;
+  }
 }
 
 .works_area .works_right_content {
